# hexDAG

./: .check_circular_imports.yaml  .check_core_imports.yaml  .check_deprecated_usage.yaml  .check_yaml_schema_sync.yaml  .coveragerc  .cursorrules  .flake8  .gitignore  .gitleaks.toml  .license-config.toml  .mutmut-config.py  .pre-commit-config.yaml  .readthedocs.yaml  .vulture_whitelist.py  .yamllint.yaml  .yamllint.yml  AI_WORKFLOW.md  ARCHITECTURE_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN_CONTROL_FLOW_NODE.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  azure-pipelines.yml  events.jsonl  hexdag.toml.example  import_time_core.txt  llm-test.yaml  mkdocs.yml  mypy.ini  pyproject.toml  sonar-project.properties  test-pipeline.yaml  test.yaml
examples/plugins/text_processing/: README.md  example_usage.py  pyproject.toml
examples/plugins/text_processing/text_processing_plugin/: __init__.py  nodes.py
hexai_plugins/mysql_adapter/: README.md  __init__.py  mysql_adapter.py  pyproject.toml
hexai_plugins/mysql_adapter/tests/: test_mysql_adapter.py
hexdag-plugins/: README.md  pyproject.toml
hexdag-plugins/hexdag_plugins/: _ports.py
hexdag-plugins/hexdag_plugins/azure/: __init__.py
hexdag-plugins/hexdag_plugins/azure/adapters/: __init__.py  blob.py  cosmos.py  keyvault.py  openai.py
hexdag-plugins/hexdag_plugins/azure/tests/: test_azure_keyvault_adapter.py
hexdag-plugins/hexdag_plugins/database/: __init__.py  _ports.py  dual_mode.py  run_scope.py  service.py
hexdag-plugins/hexdag_plugins/database/adapters/: __init__.py  sqlalchemy_adapter.py  state_backend.py
hexdag-plugins/hexdag_plugins/database/macros/: __init__.py  transaction.py
hexdag-plugins/hexdag_plugins/database/tests/: test_database_service.py  test_dual_mode.py  test_port_discovery.py  test_run_scope.py  test_run_scoped_sessions.py  test_sqlalchemy_adapter.py  test_transaction_macro.py
hexdag-plugins/hexdag_plugins/google/adapters/: vertex.py
hexdag-plugins/hexdag_plugins/google/tests/: test_vertex_adapter.py
hexdag-plugins/hexdag_plugins/hexdag_etl/tests/: test_plugin_integration.py
hexdag-plugins/hexdag_plugins/langfuse/: README.md  __init__.py  observer.py
hexdag-plugins/hexdag_plugins/langfuse/tests/: test_langfuse_observer.py
hexdag-plugins/hexdag_plugins/mail/: __init__.py
hexdag-plugins/hexdag_plugins/mail/adapters/: __init__.py  graph.py  noop.py  sendgrid.py
hexdag-plugins/hexdag_plugins/mail/tests/: test_noop_adapter.py  test_sendgrid_adapter.py
hexdag-plugins/hexdag_plugins/mysql_adapter/: pyproject.toml
hexdag-plugins/hexdag_plugins/mysql_adapter/adapters/: mysql.py
hexdag-plugins/hexdag_plugins/mysql_adapter/tests/: test_mysql_adapter.py
hexdag-plugins/hexdag_plugins/ollama/adapters/: ollama.py
hexdag-plugins/hexdag_plugins/ollama/tests/: test_ollama_adapter.py
hexdag-plugins/hexdag_plugins/storage/ports/: __init__.py
hexdag-plugins/hexdag_plugins/storage/tests/: test_local_file_storage.py
hexdag-studio/: README.md  pyproject.toml
hexdag-studio/examples/: complex_workflow.yaml  diamond_dag.yaml  simple_linear.yaml
hexdag-studio/hexdag_studio/: __init__.py  build_ui.py  cli.py
hexdag-studio/hexdag_studio/server/: __init__.py  main.py
hexdag-studio/hexdag_studio/server/routes/: __init__.py  environments.py  execute.py  export.py  files.py  plugins.py  registry.py  validate.py
hexdag-studio/ui/: index.html  package-lock.json  tsconfig.node.json
hexdag-studio/ui/src/: App.tsx  index.css
hexdag-studio/ui/src/components/: Canvas.tsx  ContextMenu.tsx  EnvironmentEditor.tsx  ExecutionPanel.tsx  FileBrowser.tsx  Header.tsx  HexdagNode.tsx  NodeInspector.tsx  NodePalette.tsx  NodePortsSection.tsx  PluginManager.tsx  PythonEditor.tsx  ResizablePanel.tsx  ValidationPanel.tsx  YamlEditor.tsx
hexdag-studio/ui/src/lib/: api.ts  formatValue.ts  nodeTemplates.ts  store.ts
hexdag-studio/ui/src/types/: index.ts
hexdag_plugins/: README.md  __init__.py  _ports.py  pyproject.toml
hexdag_plugins/azure/: README.md  __init__.py  azure_blob_adapter.py  azure_cosmos_adapter.py  azure_keyvault_adapter.py  azure_openai_adapter.py  pyproject.toml
hexdag_plugins/azure/adapters/: blob.py  cosmos.py  keyvault.py  openai.py
hexdag_plugins/azure/tests/: __init__.py  test_azure_blob_adapter.py  test_azure_cosmos_adapter.py  test_azure_keyvault_adapter.py  test_azure_openai_adapter.py
hexdag_plugins/email/: __init__.py
hexdag_plugins/email/adapters/: __init__.py  graph.py  noop.py
hexdag_plugins/email/tests/: test_noop_adapter.py
hexdag_plugins/google/: __init__.py
hexdag_plugins/google/adapters/: __init__.py  vertex.py
hexdag_plugins/google/tests/: test_vertex_adapter.py
hexdag_plugins/hexdag_etl/: README.md  __init__.py  hexdag.toml  pyproject.toml  test_transform.py
hexdag_plugins/hexdag_etl/examples/: 01_simple_pandas_transform.py  02_simple_pandas_only.py  03_file_io_pipeline.py  test_pandas_transform.py
hexdag_plugins/hexdag_etl/hexdag_etl/: __init__.py
hexdag_plugins/hexdag_etl/hexdag_etl/nodes/: __init__.py  api_extract.py  base_node_factory.py  file_io.py  outlook.py  pandas_transform.py  sql_extract_load.py
hexdag_plugins/hexdag_etl/tests/: test_plugin_integration.py
hexdag_plugins/mail/: __init__.py
hexdag_plugins/mail/adapters/: graph.py
hexdag_plugins/mysql_adapter/: LICENSE  README.md  __init__.py  mysql_adapter.py
hexdag_plugins/mysql_adapter/adapters/: __init__.py
hexdag_plugins/ollama/: __init__.py
hexdag_plugins/ollama/adapters/: __init__.py  ollama.py
hexdag_plugins/ollama/tests/: test_ollama_adapter.py
hexdag_plugins/storage/: README.md  __init__.py  pyproject.toml
hexdag_plugins/storage/adapters/: __init__.py
hexdag_plugins/storage/adapters/file/: __init__.py  local.py
hexdag_plugins/storage/file/: local.py
hexdag_plugins/storage/ports/: vector_store.py
hexdag_plugins/storage/sql/: __init__.py  base.py  mysql.py  postgresql.py
hexdag_plugins/storage/tests/: __init__.py  test_sql_adapters.py
hexdag_plugins/storage/vector/: chromadb.py  in_memory.py  pgvector.py
(+1704 files in other folders)
