[project]
name = "hexdag"
version = "0.1.0"
description = "Lightweight DAG orchestration framework with enterprise pipeline capabilities"
authors = [{ name = "hexDAG Team" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = "MIT"
keywords = [
    "dag",
    "orchestration",
    "pipeline",
    "workflow",
    "async",
    "hexagonal-architecture",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic~=2.0",
    "graphviz>=0.20.0,<0.21",
    "pyyaml~=6.0",
]

[project.urls]
Homepage = "https://dev.azure.com/omniviser/_git/hexDAG"
Repository = "https://dev.azure.com/omniviser/_git/hexDAG"
Documentation = "https://dev.azure.com/omniviser/hexDAG"

[project.scripts]
hexdag = "hexai.cli:main"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
    "black==24.10.0",
    "isort==5.13.2",
    "ruff>=0.12.8",
    "flake8==7.1.1",
    "flake8-docstrings==1.7.0",
    "flake8-import-order==0.18.2",
    "flake8-bugbear==24.12.12",
    "flake8-comprehensions==3.16.0",
    "flake8-print==5.0.0",
    "pep8-naming==0.14.1",
    "mypy==1.17.1",
    "pyright==1.1.405",
    "bandit==1.7.10",
    "pre-commit==3.8.0",
    "commitizen==4.8.3",
    "watchdog==6.0.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.16",
    "mkdocs-mermaid2-plugin==1.2.1",
    "types-pyyaml==6.0.12",
    "safety>=3.0.0",
    "yamllint>=1.35.0",
    "vulture>=2.11",
    "radon>=6.0.1",
    "twine>=6.1.0",

]


[tool.hatch.build.targets.sdist]
include = ["hexai"]

[tool.hatch.build.targets.wheel]
include = ["hexai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=hexai --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["hexai"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/examples/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    ".venv",
    "build",
    "dist",
    ".git",
    ".mypy_cache",
    ".tox",
    ".eggs",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = ["tests/**", "examples/**", ".venv", "build", "dist", "**/test_*.py"]
include = ["hexai"]

# Type checking settings
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingTypeArgument = false

# Reduce strictness for practical development
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryComparison = "warning"
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedFunction = false
reportPrivateUsage = false

# Keep important checks
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportAttributeAccessIssue = true
reportUndefinedVariable = true
reportIncompatibleMethodOverride = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "tests",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade - automatically upgrade syntax for newer Python versions
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "TCH",    # flake8-type-checking
    "FA",     # flake8-future-annotations
    "PERF",   # perflint - performance-focused best practices
]
# Specifically enforce modern type hints
extend-select = [
    "UP006",  # Use `list` instead of `List` from typing
    "UP007",  # Use `X | Y` instead of `Union[X, Y]`
    "UP035",  # Use `dict` instead of `Dict` from typing
    "UP037",  # Use `X | None` instead of `Optional[X]`
    "UP040",  # Use `type` alias syntax instead of `TypeAlias`
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP"]  # Don't enforce modern types in tests
"examples/*" = ["UP"]  # Don't enforce modern types in examples
"hexai/core/application/events/observers.py" = ["SIM115"]  # FileObserver manages file handle with close()

[tool.ruff.lint.isort]
known-first-party = ["hexai"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

[tool.vulture]
min_confidence = 90
paths = ["hexai"]
exclude = ["tests/", "examples/"]

[tool.radon]
exclude = "tests/*,examples/*"
cc_min = "B"  # Minimum complexity grade (A, B, C, D, E, F)
show_complexity = true


[tool.safety]
# Ignore specific vulnerability IDs if needed
# ignore = ["12345"]
audit-and-monitor = true
