[project]
name = "hexdag"
version = "0.1.0"
description = "Lightweight DAG orchestration framework with enterprise pipeline capabilities"
authors = [{ name = "hexDAG Team" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
    "dag",
    "orchestration",
    "pipeline",
    "workflow",
    "async",
    "hexagonal-architecture",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic~=2.0",
    "pyyaml~=6.0",   # YAML pipeline support (core feature)
    "orjson>=3.9.0", # Fast JSON serialization (2-5x faster than stdlib json)
    "loguru>=0.7.0",
    "typer>=0.9.0",  # CLI framework (previously optional)
    "rich>=13.0.0",  # Rich terminal output and logging (previously optional)
]

[project.optional-dependencies]
viz = [
    "graphviz>=0.20.0,<0.21",  # For DAG visualization
]
openai = [
    "openai>=1.0.0",  # OpenAI LLM adapter
]
anthropic = [
    "anthropic>=0.25.0",  # Anthropic Claude LLM adapter
]
database = [
    "aiosqlite>=0.19.0",  # Async SQLite database adapter
]
docs = [
    "mkdocs>=1.6.0",  # Documentation site generator
    "mkdocs-material>=9.6.0",  # Material theme for MkDocs
    "mkdocstrings[python]>=0.24.0",  # Auto-generate API docs
    "pymdown-extensions>=10.0",  # Markdown extensions
]
all = [
    "graphviz>=0.20.0,<0.21",  # Visualization
    "openai>=1.0.0",  # OpenAI adapter
    "anthropic>=0.25.0",  # Anthropic adapter
    "aiosqlite>=0.19.0",  # Async SQLite adapter
]

[project.urls]
Homepage = "https://dev.azure.com/omniviser/_git/hexDAG"
Repository = "https://dev.azure.com/omniviser/_git/hexDAG"
Documentation = "https://dev.azure.com/omniviser/hexDAG"

[project.scripts]
hexdag = "hexdag.cli:main"

[dependency-groups]
dev = [
    # Include all optional dependencies for development
    "hexdag[all]",
    # Testing dependencies
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
    "pytest-memray>=1.7.0,<2",
    "memray>=1.14.0,<2",
    "mutmut>=3.1.0,<4",
    "diff-cover>=9.0.0,<10",
    # Build and publish tools
    "build>=1.0.0",
    "twine>=6.1.0",
    # Code quality tools
    "deptry>=0.23.1",
    "black==24.10.0",
    "isort==5.13.2",
    "ruff>=0.13.0",
    "flake8==7.1.1",
    "flake8-docstrings==1.7.0",
    "flake8-import-order==0.18.2",
    "flake8-bugbear==24.12.12",
    "flake8-comprehensions==3.16.0",
    "flake8-print==5.0.0",
    "pep8-naming==0.14.1",
    "mypy==1.17.1",
    "pyright==1.1.405",
    "bandit==1.7.10",
    "pre-commit==3.8.0",
    "commitizen==4.8.3",
    "watchdog==6.0.0",
    # Documentation (pinned versions for development)
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.16",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions==10.13",
    "mkdocs-mermaid2-plugin==1.2.1",
    # Types and tools
    "types-pyyaml==6.0.12",
    "safety>=3.0.0",
    "yamllint>=1.35.0",
    "vulture>=2.11",
    "radon>=6.0.1",
    "licensecheck>=2024.3",
    "pip-licenses>=5.0.0",
    "interrogate>=1.7.0",
    "docstring-parser>=0.17.0",
]


[tool.hatch.build.targets.sdist]
include = ["hexdag"]

[tool.hatch.build.targets.wheel]
include = ["hexdag"]

[tool.hexdag]
# Core modules to load - these are the essential framework components
modules = [
    "hexdag.core.ports",               # Core port definitions (must load before adapters)
    "hexdag.builtin.nodes",            # Core node factories
    "hexdag.builtin.tools.builtin_tools",     # Built-in tools (tool_end, change_phase)
]

# Default plugins - mock and local adapters for testing and development
plugins = [
    "hexdag.builtin.adapters.local",  # Local in-process implementations
]

# Development mode enabled by default
dev_mode = true

# Logging configuration - automatically applied during bootstrap
# Environment variables (HEXDAG_LOG_*) override these settings
[tool.hexdag.logging]
level = "INFO"             # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
format = "structured"      # Output format: console, json, structured
use_color = true           # Use ANSI color codes (auto-disabled for non-TTY)
include_timestamp = true   # Include timestamp in output
# output_file = "hexdag.log"  # Optional: write logs to file

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.coverage.run]
source = ["hexdag"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/examples/*",
    "*_plugins/*",
    "hexdag/cli/*"  # CLI has separate test suite with 67% coverage
]

[tool.coverage.report]
# Fail if coverage drops below threshold
fail_under = 70

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# Show which lines are missing coverage
show_missing = true

# Skip fully covered files in report
skip_covered = false

# Precision for coverage percentage
precision = 2


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = ["tests/", "examples/", ".mutmut-config.py", "docs/"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["tests.*", "hexdag_plugins.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["openai", "anthropic", "graphviz", "orjson"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hexdag.cli.*"]
disallow_untyped_decorators = false

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = ["tests/**", "examples/**", "hexdag_plugins/**", ".venv", "build", "dist", ".mutmut-config.py", "docs/**"]
include = ["hexdag"]

# Type checking settings
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingTypeArgument = false

# Reduce strictness for practical development
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryComparison = "warning"
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedFunction = false
reportPrivateUsage = false

# Keep important checks
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportAttributeAccessIssue = true
reportUndefinedVariable = true
reportIncompatibleMethodOverride = true

[tool.bandit]
exclude_dirs = ["tests", "examples", "hexdag_plugins"]
skips = ["B101", "B601"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
preview = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade - automatically upgrade syntax for newer Python versions
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "TCH",    # flake8-type-checking
    "FA",     # flake8-future-annotations
    "PERF",   # perflint - performance-focused best practices,
    "DOC",    # pydocstyle - documentation style
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
# Specifically enforce modern type hints
extend-select = [
    "UP006",  # Use `list` instead of `List` from typing
    "UP007",  # Use `X | Y` instead of `Union[X, Y]`
    "UP035",  # Use `dict` instead of `Dict` from typing
    "UP037",  # Use `X | None` instead of `Optional[X]`
    "UP040",  # Use `type` alias syntax instead of `TypeAlias`
]

ignore = [
"D417", # Missing argument descriptions in docstring
"DOC201", # Don't require "Returns" section
"DOC202", # (Optional) Don't require "Yields" section
"DOC501", # Don't require documenting raised exceptions in docstrings
"DOC402", # Don't require documenting yields in docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP", "SIM117", "SIM102", "SIM105", "PERF401"]
"examples/*" = ["UP", "E501", "PTH123"]
"examples/demo/*" = ["E501"]
"hexdag_plugins/*" = ["UP", "TCH", "FA"]
"hexdag/core/orchestration/events/observers.py" = ["SIM115"]
"hexdag/core/registry/discovery.py" = ["TC003", "TC001"]
"hexdag/cli/*" = ["DOC501", "PTH123", "B008", "B904", "SIM102"]  # CLI: typer patterns

[tool.ruff.lint.isort]
known-first-party = ["hexdag"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
bump_message = "chore(release): bump version $current_version → $new_version"

# Changelog configuration
[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
docs = "Documentation"
style = "Styles"
refactor = "Code Refactoring"
perf = "Performance Improvements"
test = "Tests"
build = "Build System"
ci = "Continuous Integration"
chore = "Chores"

[tool.vulture]
min_confidence = 90
paths = ["hexdag", ".vulture_whitelist.py"]
exclude = ["tests/", "examples/", "hexdag/core/ports/", "hexdag_plugins/"]


[tool.radon]
exclude = "tests/*,examples/*,hexdag_plugins/*"
cc_min = "B"  # Minimum complexity grade (A, B, C, D, E, F)
show_complexity = true


[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 95.0
exclude = ["tests", "examples", "hexdag_plugins", ".git", ".tox"]
ignore-regex = ["^get$", "^set$", "^main$"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"


[tool.safety]
# Ignore specific vulnerability IDs if needed
# ignore = ["12345"]
audit-and-monitor = true

[tool.deptry]
# Ignore checks for optional dependencies
ignore = [
    "DEP002",  # Dependencies defined but not used
    "DEP003",  # Transitive dependencies (typer, rich are pulled by other deps)
    "DEP004",  # Dev dependencies used in tests
]

# Exclude paths from scanning
exclude = [
    ".venv",  # Virtual environment
    "venv",  # Alternative virtual environment name
    "build",  # Build artifacts directory
    "examples/demo",  # Demo files with mock langchain imports
    "examples/plugins",  # Plugin examples have their own dependencies
    "examples/run_text_analysis_pipeline.py",  # Uses plugin-specific transformers
    "examples/simple_text_analysis.py",  # Uses plugin-specific transformers
    "tests",  # Test files use dev dependencies
    "hexdag_plugins",  # External plugin directories
]

# Per-rule ignores for specific packages
[tool.deptry.per_rule_ignores]
DEP002 = ["openai", "anthropic"]

# Package name mappings
package_module_name_map = { openai = "openai", anthropic = "anthropic" }
