[project]
name = "hexdag"
version = "0.7.0.dev3"

description = "Lightweight DAG orchestration framework with enterprise pipeline capabilities"
authors = [{ name = "hexDAG Team", email = "developers@omniviser.ai" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
    "dag",
    "orchestration",
    "pipeline",
    "workflow",
    "async",
    "hexagonal-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic~=2.0",
    "pyyaml~=6.0",   # YAML pipeline support (core feature)
    "jinja2>=3.1.0", # YAML templating support (enables dynamic configs)
    "orjson>=3.9.0", # Fast JSON serialization (2-5x faster than stdlib json)
    "loguru>=0.7.0",
    "typer>=0.9.0",  # CLI framework (previously optional)
    "rich>=13.0.0",  # Rich terminal output and logging (previously optional)
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0", # OpenAI LLM adapter
]
anthropic = [
    "anthropic>=0.25.0", # Anthropic Claude LLM adapter
]
database = [
    "aiosqlite>=0.19.0", # Async SQLite database adapter
    "aiofiles>=23.0.0",  # Async file I/O for CSV adapter
]
mcp = [
    "mcp>=1.0.0", # Model Context Protocol server support
]
# Storage plugin extras (bundled with main package)
storage-postgresql = ["sqlalchemy>=2.0.0", "asyncpg>=0.29.0", "pgvector>=0.3.0"]
storage-mysql = ["sqlalchemy>=2.0.0", "aiomysql>=0.2.0"]
storage-sqlite = ["sqlalchemy>=2.0.0", "aiosqlite>=0.20.0"]
storage-chromadb = ["chromadb>=0.4.0"]
storage-all = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.4.0",
]
notebooks = [
    "jupyter>=1.0.0",    # Jupyter notebook support
    "nbformat>=5.9.0",   # Notebook format library
    "nbconvert>=7.0.0",  # Convert and execute notebooks
    "ipykernel>=6.25.0", # IPython kernel for Jupyter
    "matplotlib>=3.8.0", # Plotting for visualization
    "pandas>=2.1.0",     # Data analysis (common in notebooks)
]
studio = ["hexdag-studio>=0.1.0"] # Visual Studio UI for hexDAG pipelines
all = [
    "hexdag[openai]",
    "hexdag[anthropic]",
    "hexdag[database]",
    "hexdag[storage-all]",
    "hexdag[notebooks]",
    "hexdag[studio]",
    "hexdag[mcp]",
]

[project.urls]
Homepage = "https://hexdag.ai"
Repository = "https://github.com/omniviser/hexdag"
Documentation = "https://hexdag.ai/docs"

[project.scripts]
hexdag = "hexdag.cli:main"
# Utility scripts
run-check-examples = "scripts.check_examples:main"
run-check-tests = "scripts.check_test_structure:main"

[dependency-groups]
dev = [
    # Include all optional dependencies for development
    "hexdag[all]",
    # Testing dependencies
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
    "pytest-memray>=1.7.0,<2",
    "memray>=1.14.0,<2",
    "mutmut>=3.1.0,<4",
    "diff-cover>=9.0.0,<10",
    # Build and publish tools
    "build>=1.0.0",
    "twine>=6.1.0",
    "keyring>=25.6.0",
    "artifacts-keyring>=1.0.0",
    # Code quality tools - linting and formatting
    "ruff>=0.13.0",     # All-in-one linter and formatter (replaces black, isort, flake8)
    "mypy==1.17.1",     # Type checking
    "pyright==1.1.405", # Alternative type checker
    "bandit==1.7.10",   # Security linting
    # Code quality tools - analysis
    "deptry>=0.23.1",     # Dependency analysis
    "vulture>=2.11",      # Dead code detection
    "radon>=6.0.1",       # Code complexity analysis
    "interrogate>=1.7.0", # Docstring coverage
    # Additional tools
    "pre-commit==3.8.0",    # Git hooks
    "watchdog==6.0.0",      # File system monitoring
    "safety>=3.0.0",        # Vulnerability scanning
    "yamllint>=1.35.0",     # YAML linting
    "licensecheck>=2024.3", # License compliance
    "pip-licenses>=5.0.0",  # License reporting
    # Type stubs
    "types-pyyaml==6.0.12",
]

docs = [
    # Documentation dependencies - MkDocs with Material theme
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.16",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions==10.13",
    "mkdocs-mermaid2-plugin==1.2.1",
]


[tool.hatch.build.targets.sdist]
packages = ["hexdag", "hexdag_plugins"]

[tool.hatch.build.targets.wheel]
packages = ["hexdag", "hexdag_plugins"]

# For local development with uv - points to local packages not yet on PyPI
[tool.uv.sources]
hexdag-studio = { path = "hexdag-studio", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.coverage.run]
source = ["hexdag"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/examples/*",
    "*/notebooks/*",
    "*_plugins/*",
    "hexdag/cli/*",    # CLI has separate test suite with 67% coverage
    "hexdag/studio/*", # Studio is new, will add tests in follow-up PR
    "hexdag/docs/*",   # Auto-generated documentation utilities
]

[tool.coverage.report]
# Fail if coverage drops below threshold
fail_under = 70

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Show which lines are missing coverage
show_missing = true

# Skip fully covered files in report
skip_covered = false

# Precision for coverage percentage
precision = 2


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "tests/",
    "examples/",
    "scripts/",
    ".mutmut-config.py",
    "docs/",
    "hexdag/studio/",
    "hexdag/cli/",
    "hexdag/mcp_server.py",
]

disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["tests.*", "hexdag_plugins.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["openai", "anthropic", "orjson"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hexdag.cli.*"]
disallow_untyped_decorators = false

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = [
    "tests/**",
    "examples/**",
    "hexdag_plugins/**",
    ".venv",
    "build",
    "dist",
    ".mutmut-config.py",
    "docs/**",
    "hexdag/studio/**",
]
include = ["hexdag"]

# Type checking settings
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingTypeArgument = false

# Reduce strictness for practical development
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryComparison = "warning"
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedFunction = false
reportPrivateUsage = false

# Keep important checks
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportAttributeAccessIssue = true
reportUndefinedVariable = true
reportIncompatibleMethodOverride = true

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs", "scripts", "hexdag_plugins"]
skips = [
    "B101",
    "B102", # exec_used: intentional for !py YAML tag (compile inline Python)
    "B404",
    "B601",
] # B404: subprocess import (legitimate use in CLI commands)

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]
preview = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade - automatically upgrade syntax for newer Python versions
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "TCH",  # flake8-type-checking
    "FA",   # flake8-future-annotations
    "PERF", # perflint - performance-focused best practices,
    "DOC",  # pydocstyle - documentation style
    "C4",   # Catch incorrect use of comprehensions, dict, list, etc
    "FA",   # Enforce from __future__ import annotations
    "ISC",  # Good use of string concatenation
    "ICN",  # Use common import conventions
    "RET",  # Good return practices
    "SIM",  # Common simplification rules
    "TID",  # Some good import practices
    "TC",   # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",  # Use pathlib instead of os.path
    "TD",   # Be diligent with TODO comments
    "NPY",  # Some numpy-specific things
]
# Specifically enforce modern type hints
extend-select = [
    "UP006", # Use `list` instead of `List` from typing
    "UP007", # Use `X | Y` instead of `Union[X, Y]`
    "UP035", # Use `dict` instead of `Dict` from typing
    "UP037", # Use `X | None` instead of `Optional[X]`
    "UP040", # Use `type` alias syntax instead of `TypeAlias`
]

ignore = [
    "D417",   # Missing argument descriptions in docstring
    "DOC201", # Don't require "Returns" section
    "DOC202", # (Optional) Don't require "Yields" section
    "DOC501", # Don't require documenting raised exceptions in docstrings
    "DOC402", # Don't require documenting yields in docstrings
    "UP042",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP", "SIM117", "SIM102", "SIM105", "PERF401"]
"examples/*" = ["UP", "E501", "PTH123"]
"examples/demo/*" = ["E501"]
"hexdag_plugins/*" = ["UP", "TCH", "FA"]
"hexdag/kernel/orchestration/events/observers.py" = ["SIM115"]
"hexdag/kernel/registry/discovery.py" = ["TC003", "TC001"]
"hexdag/cli/*" = [
    "DOC501",
    "PTH123",
    "B008",
    "B904",
    "SIM102",
] # CLI: typer patterns
"notebooks/*" = [
    "E402",
    "F704",
    "E266",
    "W293",
    "E501",
    "W291",
] # Notebooks: allow top-level await, imports anywhere, markdown syntax, long lines, trailing whitespace
"hexdag/stdlib/prompts/*" = [
    "E501",
    "TC003",
] # Prompts: long template strings are ok, runtime Callable usage
"hexdag/kernel/pipeline_builder/yaml_builder.py" = [
    "E501",
] # YAML examples can be long

[tool.ruff.lint.isort]
known-first-party = ["hexdag"]

[tool.vulture]
min_confidence = 90
paths = ["hexdag", ".vulture_whitelist.py"]
exclude = [
    "tests/",
    "examples/",
    "hexdag/kernel/ports/",
    "hexdag_plugins/",
    "hexdag/studio/",
]


[tool.radon]
exclude = "tests/*,examples/*,hexdag_plugins/*,hexdag/studio/*"
cc_min = "B"                                                    # Minimum complexity grade (A, B, C, D, E, F)
show_complexity = true


[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = true # Nested functions are implementation details
ignore-nested-classes = false
ignore-setters = false
fail-under = 95.0
exclude = [
    "tests",
    "examples",
    "hexdag_plugins",
    ".git",
    ".tox",
    "hexdag/studio",
]
ignore-regex = ["^get$", "^set$", "^main$"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"


[tool.safety]
# Ignore specific vulnerability IDs
# urllib3 2.3.0 vulnerabilities - not applicable (we don't use Pyodide runtime)
# 77745: CVE-2025-50182 - redirect control in Pyodide
# 77744: CVE-2025-50181 - urllib3 Pyodide issue
# 51457: CVE-2022-42969 - py package vulnerability (transitive, not directly used)
ignore = ["77745", "77744", "51457"]
audit-and-monitor = true

[tool.deptry]
# Ignore checks for optional dependencies
ignore = [
    "DEP002", # Dependencies defined but not used
    "DEP003", # Transitive dependencies (typer, rich are pulled by other deps)
    "DEP004", # Dev dependencies used in tests
]

# Exclude paths from scanning
exclude = [
    ".venv",                                  # Virtual environment
    "venv",                                   # Alternative virtual environment name
    "build",                                  # Build artifacts directory
    "examples/demo",                          # Demo files with mock langchain imports
    "examples/plugins",                       # Plugin examples have their own dependencies
    "examples/*",                             # Raven example has its own pyproject.toml and venv
    "examples/run_text_analysis_pipeline.py", # Uses plugin-specific transformers
    "examples/simple_text_analysis.py",       # Uses plugin-specific transformers
    "examples/mcp",                           # MCP examples use optional MCP-specific dependencies (tavily)
    "tests",                                  # Test files use dev dependencies
    "hexdag_plugins",                         # External plugin directories
    "hexdag-studio",                          # Separate package with its own dependencies
    "hexdag-studio/.venv",                    # Nested venv in studio package
]

# Per-rule ignores for specific packages
[tool.deptry.per_rule_ignores]
DEP002 = ["openai", "anthropic"]

# Package name mappings
package_module_name_map = { openai = "openai", anthropic = "anthropic" }
