[project]
name = "hexdag-plugins"
version = "0.3.0.dev1"
description = "Official plugins for hexDAG framework - Azure, Google, Ollama, Email, MySQL, ETL, and storage adapters"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "hexDAG Team", email = "developers@omniviser.ai" }]
requires-python = ">=3.12"
keywords = [
    "hexdag",
    "plugins",
    "azure",
    "google",
    "gemini",
    "vertex",
    "ollama",
    "email",
    "mysql",
    "etl",
    "storage",
    "adapter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hexdag>=0.9.0.dev1",
]

[project.optional-dependencies]
# Azure plugins
azure = ["openai>=1.0.0"]
azure-blob = ["azure-storage-blob>=12.13.0", "azure-identity>=1.13.0"]
azure-cosmos = ["azure-cosmos>=4.3.0", "azure-identity>=1.13.0"]
azure-keyvault = ["azure-keyvault-secrets>=4.4.0", "azure-identity>=1.13.0"]
azure-all = [
    "hexdag-plugins[azure]",
    "hexdag-plugins[azure-blob]",
    "hexdag-plugins[azure-cosmos]",
    "hexdag-plugins[azure-keyvault]",
]

# Database plugin (declarative transactions + ready-made DatabaseService)
database = [
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
]

# MySQL plugin
mysql = ["pymysql>=1.1.0"]

# ETL plugin
etl = ["pandas>=2.0.0", "aiohttp>=3.8.0"]

# Storage plugins (additional drivers beyond what's in main hexdag)
storage-postgresql = ["sqlalchemy>=2.0.0", "asyncpg>=0.29.0", "pgvector>=0.3.0"]
storage-mysql = ["sqlalchemy>=2.0.0", "aiomysql>=0.2.0"]
storage-chromadb = ["chromadb>=0.4.0"]
storage-all = [
    "hexdag-plugins[storage-postgresql]",
    "hexdag-plugins[storage-mysql]",
    "hexdag-plugins[storage-chromadb]",
]

# Google Cloud plugins (adapter moved to hexdag.stdlib.adapters.google)
google = ["hexdag[google]"]

# Ollama plugin (adapter moved to hexdag.stdlib.adapters.ollama)
ollama = ["hexdag[ollama]"]

# Langfuse observability
langfuse = ["langfuse>=2.0.0"]

# Email plugins
mail-graph = ["httpx>=0.24.0"]
mail-sendgrid = ["httpx>=0.24.0"]
mail-all = [
    "hexdag-plugins[mail-graph]",
    "hexdag-plugins[mail-sendgrid]",
]

# All plugins
all = [
    "hexdag-plugins[azure-all]",
    "hexdag-plugins[google]",
    "hexdag-plugins[ollama]",
    "hexdag-plugins[mail-all]",
    "hexdag-plugins[mysql]",
    "hexdag-plugins[etl]",
    "hexdag-plugins[storage-all]",
    "hexdag-plugins[langfuse]",
    "hexdag-plugins[database]",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.entry-points."hexdag.ports"]
database = "hexdag_plugins.database._ports"

[project.entry-points."hexdag.adapters"]
sqlalchemy = "hexdag_plugins.database.adapters.sqlalchemy_adapter"

[project.entry-points."hexdag.macros"]
transaction = "hexdag_plugins.database.macros.transaction"

[project.urls]
"Homepage" = "https://hexdag.ai"
"Repository" = "https://github.com/omniviser/hexdag"
"Documentation" = "https://hexdag.ai/docs/plugins"
"Bug Reports" = "https://github.com/omniviser/hexdag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/tests/",
    "**/test_*.py",
    "**/examples/",
    "**/*.pyc",
    "**/__pycache__/",
]

[tool.hatch.build.targets.wheel]
packages = ["hexdag_plugins"]

[tool.hatch.build.targets.sdist]
include = [
    "hexdag_plugins/",
    "README.md",
    "LICENSE",
]
exclude = [
    "**/tests/",
    "**/test_*.py",
    "**/examples/",
    "**/*.pyc",
    "**/__pycache__/",
]

# For local development with uv
[tool.uv.sources]
hexdag = { path = "..", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
]
ignore = [
    "SIM105",  # contextlib.suppress doesn't work with async
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["hexdag_plugins/azure/tests", "hexdag_plugins/mysql_adapter/tests", "hexdag_plugins/hexdag_etl/tests", "hexdag_plugins/storage/tests", "hexdag_plugins/google/tests", "hexdag_plugins/ollama/tests", "hexdag_plugins/mail/tests", "hexdag_plugins/langfuse/tests", "hexdag_plugins/database/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
