[project]
name = "hexdag-studio"
version = "0.2.0.dev2"
description = "Visual Studio UI for hexDAG pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "hexDAG Team", email = "developers@omniviser.ai" }]
keywords = ["hexdag", "studio", "ui", "dag", "workflow", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "watchfiles>=0.21.0",
    "hexdag>=0.5.0.dev4",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[project.urls]
"Homepage" = "https://hexdag.ai"
"Repository" = "https://github.com/omniviser/hexdag"
"Documentation" = "https://hexdag.ai/docs/studio"
"Bug Reports" = "https://github.com/omniviser/hexdag/issues"

[project.scripts]
hexdag-studio = "hexdag_studio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexdag_studio"]

[tool.hatch.build.targets.sdist]
include = ["hexdag_studio/", "ui/dist/"]

# For local development with uv (not used in PyPI builds)
[tool.uv.sources]
hexdag = { path = "..", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
